--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=employeeapi
+spring.datasource.url=jdbc:mysql//localhost:3306/employee_directory
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
